dev: adding specific build definition for SaveAsDAISY